--- a/cards.html
+++ b/cards.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="imgs\icon64.png">
+	<link rel="icon" type="image/png" href="imgs\icon128.png">
 	<title>Манчкин</title>
 	<!--<link rel="stylesheet" href="style.css">-->
 	<link rel="stylesheet" href="header.css">
@@ -47,50 +47,52 @@
 			</nav>
 		</div>
 		
-		<a>Вход / Регистрация</a>
+		<!--<a>Вход / Регистрация</a>-->
 		
 	</header>
 	<main>
 		<section id="p1">
-			<h2>Манчкин</h2>
-			<img src="imgs\munchkin.png" alt="Манчкин">
-			<p>Карточное ролевое развлечение в жанре «фэнтези». Разобравшись со всеми правилами и нюансами,
-			каждый будет готов отправиться в подземелье, убивать монстров, овладевать сокровищами и весело
-			проводить время в небольшой компании. Игра предназначена для участников от 12 лет, а длиться
-			партия может от 30 минут до нескольких часов, в зависимости от опыта и усидчивости играющих.</p>
+			<h2>Классы и расы</h2>
+			<img src="imgs\Classesandraces.png" alt="Манчкин">
+			<p>Каждый игрок может иметь одну карту класса и одну карту расы. При наличии карты "Супер-манчкин" 
+			или "Полукровка" можно иметь два класса или расы соотвествено, совмещая свойства двух карт, или используя
+			с одной картой и избавившись от его негативных свойств. Эти карты
+			дают дополнительные возможности, также некоторые монстры имеют слабости или преимущества перед различными
+			классами и расами. При отсутствии карты класса игрок является человеком.</p>
 		</section>
 		
-		<section id="p2">
-			<h2>История</h2>
-			<img src="imgs\history.png" alt="Манчкин">
-			<p>«Манчкин» появился на стыке тысячелетий — в 2001 году. Опытный геймдизайнер Стив Джексон
-			задумал создать весёлую и непринуждённую пародию на ролевые фэнтезийные игры, в которых он
-			знал толк. Помогал Джексону художник-карикатурист Джон Ковалик. Идея оправдала себя — уже
-			пятнадцать лет «Манчкин» остаётся одной из самых популярных настольных игр в мире.</p>
+		<section id="p2" class="dark">
+			<h2>Получи уровень</h2>
+			<img src="imgs\getlevel.png" alt="Манчкин">
+			<p>Карты, которые, как не удивительно, позволяют ее обладателю увелчить свой уровень. 
+			Использовать ее можно в любой момент, но некоторые карты этого типа можно использовать 
+			только при соблюдении некоторых условий.</p>
 		</section>
 		
-		<section id="p3">
-			<h2>Геймплей</h2>
-			<img src="imgs\gameplay.png" alt="Манчкин">
-			<p>Суть игры проста: несколько игроков со случайным начальным набором оружия, предметов и
-			характеристик спускаются в подземелья. Они заглядывают в комнаты, сражаются с местными
-			обитателями и в случае победы забирают сокровища, которые те охраняли. В случае победы
-			манчкин получает новый уровень. Если победить не удастся (чаще всего из-за соперников,
-			которые подкидывают разные пакости), он подвергается непотребству. Впрочем, манчкины не
-			всегда действуют друг против друга — в бою можно и помочь ближнему… если тот поделится
-			добытыми сокровищами, например. Тот счастливчик, кто первым достигнет 10-го уровня,
-			получит лавры самого крутого манчкина.</p>
+		<section id="p3" class="dark">
+			<h2>Оружие и броня</h2>
+			<img src="imgs\weapon.png" alt="Манчкин">
+			<p>Шмоткой является любая карта, имеющая стоимость. Большинство шмоток - оружие и броня. Игрок имеет 
+			две руки и может носить одну тяжелую шмотку (кроме дварфов). Также каждый игрок может иметь только 
+			один головняк, один броник и одни ботинки. На шмотке всегда указано, занимает ли она тот или иной слот 
+			экипировки.</p>
 		</section>
 		
-		<section id="p4">
-			<h2>История</h2>
-			<img src="https://www.igrotime.ru/upload/t/800-700im/large_foto/manchkin.jpg" alt="Манчкин">
-			<p>«Манчкин» появился на стыке тысячелетий — в 2001 году. Опытный геймдизайнер Стив Джексон 
-			задумал создать весёлую и непринуждённую пародию на ролевые фэнтезийные игры, в которых он 
-			знал толк: именно он когда-то создал популярную систему GURPS. Помогал Джексону художник-карикатурист
-			Джон Ковалик, выпускавший комиксы опять-таки на тему ролевых игр. Идея оправдала себя — уже пятнадцать
-			лет «Манчкин» остаётся одной из самых популярных настольных игр в мире.</p>
+		<section id="p4" class="dark">
+			<h2>Разовые шмотки</h2>
+			<img src="imgs\stuff.png" alt="Манчкин">
+			<p>Разовые шмотки можно использовать один раз. Их можно использовать на любом игроке. Они дают 
+			боевой бонус той или иной стороне боя, другие особые возможности: автоматически победить монстра, 
+			сбежать из боя, избавиться от проклятия и т.д.</p>
 		</section>
+	<!--	
+			
+			<section id="p5">
+				<h2>Проклятия</h2>
+				<img src="imgs\history.png" alt="Манчкин">
+				<p>Проклятия позволяют игроку вставлять палки в колеса своим соперникам. Их можно применять в любой
+				момент хода.</p>
+			</section>-->
 	</main>
 	
 	<footer>
