--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="imgs\icon64.png">
+	<link rel="icon" type="image/png" href="imgs\icon128.png">
 	<title>Манчкин</title>
 	<!--<link rel="stylesheet" href="style.css">-->
 	<link rel="stylesheet" href="header.css">
@@ -47,7 +47,7 @@
 			</nav>
 		</div>
 		
-		<a>Вход / Регистрация</a>
+		<!--<a>Вход / Регистрация</a>-->
 		
 	</header>
 
@@ -62,9 +62,9 @@
 			партия может от 30 минут до нескольких часов, в зависимости от опыта и усидчивости играющих.</p>
 		</section>
 		
-		<section id="p2">
+		<section id="p2" class="dark">
 			<h2>История</h2>
-			<img src="imgs\history.png" alt="Манчкин">
+			<img src="imgs\history.png" alt="История">
 			<p>«Манчкин» появился на стыке тысячелетий — в 2001 году. Опытный геймдизайнер Стив Джексон
 			задумал создать весёлую и непринуждённую пародию на ролевые фэнтезийные игры, в которых он
 			знал толк. Помогал Джексону художник-карикатурист Джон Ковалик. Идея оправдала себя — уже
@@ -73,7 +73,7 @@
 		
 		<section id="p3">
 			<h2>Геймплей</h2>
-			<img src="imgs\gameplay.png" alt="Манчкин">
+			<img src="imgs\gameplay.png" alt="Геймплей">
 			<p>Суть игры проста: несколько игроков со случайным начальным набором оружия, предметов и
 			характеристик спускаются в подземелья. Они заглядывают в комнаты, сражаются с местными
 			обитателями и в случае победы забирают сокровища, которые те охраняли. В случае победы
@@ -85,13 +85,13 @@
 		</section>
 		
 		<section id="p4">
-			<h2>История</h2>
-			<img src="https://www.igrotime.ru/upload/t/800-700im/large_foto/manchkin.jpg" alt="Манчкин">
-			<p>«Манчкин» появился на стыке тысячелетий — в 2001 году. Опытный геймдизайнер Стив Джексон 
-			задумал создать весёлую и непринуждённую пародию на ролевые фэнтезийные игры, в которых он 
-			знал толк: именно он когда-то создал популярную систему GURPS. Помогал Джексону художник-карикатурист
-			Джон Ковалик, выпускавший комиксы опять-таки на тему ролевых игр. Идея оправдала себя — уже пятнадцать
-			лет «Манчкин» остаётся одной из самых популярных настольных игр в мире.</p>
+			<h2>Дополнения</h2>
+			<img src="imgs\add.png" alt="Дополнения">
+			<p>Опытные игроки могут разнообразить приевшийся игровой процесс засчет разнообразных 
+			дополнений. Есть нумерованные дополнения к стандартному набору, расширяющие привычный 
+			список монстров, классов, рас, шмоток и проклятий. Имеются также дополнения, заменяющие 
+			стандартный набор "Манчкин", на тематичкский, например Warhammer40.000, Gravity Falls и 
+			Русский Манчкин.</p>
 		</section>
 	</main>
 	
