--- a/rules.html
+++ b/rules.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="imgs\icon64.png">
+	<link rel="icon" type="image/png" href="imgs\icon128.png">
 	<title>Манчкин</title>
 	<link rel="stylesheet" href="header.css">
 	<link rel="stylesheet" href="main.css">
@@ -46,50 +46,48 @@
 			</nav>
 		</div>
 		
-		<a>Вход / Регистрация</a>
+		<!--<a>Вход / Регистрация</a>-->
 		
 	</header>
 
 	
 	<main>
-		<section id="p1">
-			<h2>Состав</h2>
-			<img src="https://www.igrotime.ru/upload/t/800-700im/large_foto/manchkin.jpg" alt="Манчкин">
-			<p>В состав оригинальной игры входят 95 карт дверей, 73 карты сокровищ, кубик и правила.
-			Игру можно расширить засчет дополнительных наборов, расширяющих и усложняющих процесс</p>
+		
+		<section id="p1" class="dark">
+			<h2>Подготовка</h2>
+			<img src="imgs\preparing.png" alt="Манчкин">
+			<p>В бой идут от трёх до шести манчкинов. Помимо карт и кубика, каждому из них понадобится
+			10 жетонов (монет, фишек) либо какая-нибудь штука, считающая до десяти, чтобы следить
+			за уровнем своего персонажа (можно использовать приложения для подсчета очков 
+			(например то, что есть на данном сайте)). Раздели карты на колоды дверей (на рубашке дверь) и сокровищ
+			(на рубашке гора сокровищ), перетасуй их и сдай всем игрокам по четыре карты из каждой колоды.</p>
 		</section>
 		
 		<section id="p2">
-			<h2>Подготовка</h2>
-			<img src="https://www.igrotime.ru/upload/t/800-700im/large_foto/manchkin.jpg" alt="Манчкин">
-			<p>В бой идут от трёх до шести манчкинов. Помимо карт и кубика, каждому из них понадобится
-			10 жетонов (монет, фишек) либо какая-нибудь штука, считающая до десяти, чтобы следить
-			за уровнем своего персонажа (можно использовать приложения для подсчета очков (например то, что есть на данном сайте)). Раздели карты на колоды дверей (на рубашке дверь) и сокровищ
-			(на рубашке гора сокровищ), перетасуй их и сдай всем игрокам по четыре карты из каждой колоды.
-			Положи колоды посередине стола.</p>
+			<h2>Открытие двери</h2>
+			<img src="imgs\opening.png" alt="Манчкин">
+			<p>Главная часть хода - открытие двери, подразумевающее выкладывание карты двери в открытую на стол. 
+			Если вы открыли карту монстра, то вам придется с ним биться. Если вы открыли карту проклятия, то оно 
+			срабатывает на вас. Если вам не выпал монстр, вы должны либо взять на руку еще одну карту двери в закрытую, 
+			либо сыграть монстра с руки. Если игрок открыл ни монстра, ни проклятия, то эта карта уходит к вам на руку.
+			</p>
 		</section>
 		
 		<section id="p3">
-			<h2>Ходы</h2>
-			<img src="https://www.igrotime.ru/upload/t/800-700im/large_foto/manchkin.jpg" alt="Манчкин">
-			<p>Суть игры проста: несколько игроков со случайным начальным набором оружия, предметов и
-			характеристик спускаются в подземелья. Они заглядывают в комнаты, сражаются с местными
-			обитателями и в случае победы забирают сокровища, которые те охраняли. В случае победы
-			манчкин получает новый уровень. Если победить не удастся (чаще всего из-за соперников,
-			которые подкидывают разные пакости), он подвергается непотребству. Впрочем, манчкины не
-			всегда действуют друг против друга — в бою можно и помочь ближнему… если тот поделится
-			добытыми сокровищами, например. Тот счастливчик, кто первым достигнет 10-го уровня,
-			получит лавры самого крутого манчкина.</p>
+			<h2>Вне боя</h2>
+			<img src="imgs\outbattle.png" alt="Манчкин">
+			<p> Вне боя игрок может обмениваться картами с другими игроками, менять свое снаряжение, 
+			сбрасывать и применять карты классов и рас и продавать шмотки. Каждые 1000 голдов с продажи
+			дают один уровень, однако остаток сгорает.</p>
 		</section>
 		
 		<section id="p4">
 			<h2>Бой с монстрами</h2>
-			<img src="https://www.igrotime.ru/upload/t/800-700im/large_foto/manchkin.jpg" alt="Манчкин">
-			<p>«Манчкин» появился на стыке тысячелетий — в 2001 году. Опытный геймдизайнер Стив Джексон 
-			задумал создать весёлую и непринуждённую пародию на ролевые фэнтезийные игры, в которых он 
-			знал толк: именно он когда-то создал популярную систему GURPS. Помогал Джексону художник-карикатурист
-			Джон Ковалик, выпускавший комиксы опять-таки на тему ролевых игр. Идея оправдала себя — уже пятнадцать
-			лет «Манчкин» остаётся одной из самых популярных настольных игр в мире.</p>
+			<img src="imgs\battle.png" alt="Манчкин">
+			<p>У каждого монстра есть уровень, она же и его сила, непотребство, которое срабатывает в 
+			случае проигрыша или иногда в случае смывки, и количество сокровищ, получаемое 
+			за победу над монстром. Также, за победу над монстром игрок получает уровень, или больше 
+			если на карте указано их количество.</p>
 		</section>
 	</main>
 	
