--- a/score.html
+++ b/score.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="imgs\icon64.png">
+	<link rel="icon" type="image/png" href="imgs\icon128.png">
 	<title>Манчкин</title>
 	<link rel="stylesheet" href="header.css">
 	<link rel="stylesheet" href="score.css">
@@ -47,7 +47,7 @@
 			</nav>
 		</div>
 		
-		<a>Вход / Регистрация</a>
+		<!--<a>Вход / Регистрация</a>-->
 		
 	</header>
 
