--- a/strats.html
+++ b/strats.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="imgs\icon64.png">
+	<link rel="icon" type="image/png" href="imgs\icon128.png">
 	<title>Манчкин</title>
 	<!--<link rel="stylesheet" href="style.css">-->
 	<link rel="stylesheet" href="header.css">
@@ -47,49 +47,47 @@
 			</nav>
 		</div>
 		
-		<a>Вход / Регистрация</a>
+		<!--<a>Вход / Регистрация</a>-->
 		
 	</header>
 	<main>
 		<section id="p1">
-			<h2>Манчкин</h2>
-			<img src="imgs\munchkin.png" alt="Манчкин">
-			<p>Карточное ролевое развлечение в жанре «фэнтези». Разобравшись со всеми правилами и нюансами,
-			каждый будет готов отправиться в подземелье, убивать монстров, овладевать сокровищами и весело
-			проводить время в небольшой компании. Игра предназначена для участников от 12 лет, а длиться
-			партия может от 30 минут до нескольких часов, в зависимости от опыта и усидчивости играющих.</p>
+			<h2>"Добрый" друг</h2>
+			<img src="imgs\friend.png" alt="Манчкин">
+			<p>Начало игры зачастую является самой сложной частью игры, когда игроки еще не готовы 
+			к подстерегающим их опасностям. Когда игрок не может победить монстра сам, он должен 
+			сбегать из боя, либо просить о помощи друга. "Манчкин" очень социальная игра, где 
+			отношения между игроками имеют важную роль. Вы должны зарекомандовать себя как 
+			хорошого помощника, и, при наличии расы "Эльф", вы будете получать уровень за каждую помощь.</p>
 		</section>
 		
 		<section id="p2">
-			<h2>История</h2>
-			<img src="imgs\history.png" alt="Манчкин">
-			<p>«Манчкин» появился на стыке тысячелетий — в 2001 году. Опытный геймдизайнер Стив Джексон
-			задумал создать весёлую и непринуждённую пародию на ролевые фэнтезийные игры, в которых он
-			знал толк. Помогал Джексону художник-карикатурист Джон Ковалик. Идея оправдала себя — уже
-			пятнадцать лет «Манчкин» остаётся одной из самых популярных настольных игр в мире.</p>
+			<h2>Безнаказанный вор</h2>
+			<img src="imgs\thief.png" alt="Манчкин">
+			<p>Класс "Вор" позволяет, при наличии карт на руках, воровать легкие шмотки, которые 
+			носят с собой другие игроки. При неудачной попытке кражи игрок теряет уровень. Однако, 
+			если у игрока первый уровень, то он не теряет уровень. Если при этом отдавать хорошие 
+			карты другим игрокам на большое их количество, то будет больше попыток получить оружие 
+			броню в начале игры, и лишить их других игроков.</p>
 		</section>
 		
-		<section id="p3">
-			<h2>Геймплей</h2>
-			<img src="imgs\gameplay.png" alt="Манчкин">
-			<p>Суть игры проста: несколько игроков со случайным начальным набором оружия, предметов и
-			характеристик спускаются в подземелья. Они заглядывают в комнаты, сражаются с местными
-			обитателями и в случае победы забирают сокровища, которые те охраняли. В случае победы
-			манчкин получает новый уровень. Если победить не удастся (чаще всего из-за соперников,
-			которые подкидывают разные пакости), он подвергается непотребству. Впрочем, манчкины не
-			всегда действуют друг против друга — в бою можно и помочь ближнему… если тот поделится
-			добытыми сокровищами, например. Тот счастливчик, кто первым достигнет 10-го уровня,
-			получит лавры самого крутого манчкина.</p>
+		<section id="p3" class="dark">
+			<h2>Ритейл</h2>
+			<img src="imgs\retail.png" alt="Манчкин">
+			<p>Победа присуждается игроку, перым получившим 10-ый уровень. Хафлинг может продавать 
+			за один ход одну шмотку по двойной цене. При обмене с игроками стоит ориентироваться на 
+			продажу нескольких шмоток на одну, не уступающую им в цене. Минусы данной стратегии в том,
+			что последний уровень можно получить только за победу над монстром, а значит необходимо 
+			заручиться монстром маленького уровня и разовыми шмотками.</p>
 		</section>
 		
-		<section id="p4">
-			<h2>История</h2>
-			<img src="https://www.igrotime.ru/upload/t/800-700im/large_foto/manchkin.jpg" alt="Манчкин">
-			<p>«Манчкин» появился на стыке тысячелетий — в 2001 году. Опытный геймдизайнер Стив Джексон 
-			задумал создать весёлую и непринуждённую пародию на ролевые фэнтезийные игры, в которых он 
-			знал толк: именно он когда-то создал популярную систему GURPS. Помогал Джексону художник-карикатурист
-			Джон Ковалик, выпускавший комиксы опять-таки на тему ролевых игр. Идея оправдала себя — уже пятнадцать
-			лет «Манчкин» остаётся одной из самых популярных настольных игр в мире.</p>
+		<section id="p4" >
+			<h2>Предатель</h2>
+			<img src="imgs\traitor.png" alt="Манчкин">
+			<p>Даже у игроков с большим уровнем могут быть проблемы. Можно мешать игрокам картами 
+			усиления монстров или разовыми шмотками, но есть более подлый метод. Можно предложить 
+			помощь игроку, но как только он согласился, обмануть его, не используя бонусы или вовсе 
+			применив проклятие. Главное, иметь возможность смыться из боя, например с помощью читерского кубика</p>
 		</section>
 	</main>
 	
